--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,52 @@
         <label for="username" >Username</label>
         <input type="text" placeholder="rabin123" id="username">
       </p>
-
+<form action="mailto:rabyn900@gmail.com" enctype="text/plain" method="post">
+  <h1>Contact Us</h1>
+  <p>
+    <label for="email">Email</label>
+    <input type="email" name="mail" placeholder="@example.com" id="email" required>
+  </p>
+  <p>
+    <label for="username">Username</label>
+    <input type="text" placeholder="rabin123" id="username" required>
+  </p>
+  <p>
+    <h3>Select Your Gender</h3>
+    <label for="male">Male</label>
+    <input value="male" type="radio" name="gender" id="male" required>
+    <label for="female">Female</label>
+    <input value="female" type="radio" name="gender" id="female">
+  </p>
+  <p>
+    <h3>Select Your Habits</h3>
+    <label for="dance">Dance</label>
+    <input value="dance" type="checkbox" name="habits" id="dance">
+    <label for="sing">Sing</label>
+    <input value="sing" type="checkbox" name="habits" id="sing">
+  </p>
+  <p>
+    <h3>Select Your Country</h3>
+    <select name="country" id="country" required>
+      <option value="">Select Country</option>
+      <option value="nepal">Nepal</option>
+      <option value="india">India</option>
+      <option value="china">China</option>
+      <optgroup label="Select Asian Country">
+        <option value="srilanka">Srilanka</option>
+        <option value="maldives">Maldives</option>
+      </optgroup>
+    </select>
+  </p>
+  <p>
+    <textarea cols="30" rows="10" name="msg" id="" placeholder="type message" required></textarea>
+  </p>
+  <p>
+    <label for="date">Please Provide Date:</label>
+    <input type="date" name="date" id="date" required>
+  </p>
+  <button>Submit</button>
+</form>
 
       <p>
       <h3>Select Your Gender</h3>
